# rust_microservice

./: Cargo.toml  README.md
config/: config.toml
src/: error.rs  main.rs
src/handler/: dicts.rs  mod.rs
src/metrix/: influx.rs  mod.rs
src/middleware/: mod.rs  request_id.rs  system_token.rs
src/storage/: mod.rs  redis.rs
