[package]
name = "target-dicts"
version = "0.1.0"
authors = ["Andrew Kotov <ak@atuko.ru>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "1.0"
serde_json = "1.0"
actix-service = "0.4.1"
futures = "0.1" 
uuid = { version = "0.7", features = ["v4"] }
serde = { version = "1.0", features = ["derive"] }
toml = "0.5"
