[package]
name = "target-dicts"
version = "0.1.0"
authors = ["Andrew Kotov <ak@atuko.ru>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "1.0"
serde_json = "1.0"
actix-service = "1.0.6"
futures = "0.1" 
uuid = { version = "0.7", features = ["v4"] }
serde = { version = "1.0", features = ["derive"] }
toml = "0.5"
slog = "2.5.2"
slog-async = "2.3.0"
slog-json = "2.3.0"
redis = "0.12.0"
